--- a/app/src/main/res/drawable/edit_text_rounded_corner.xml
+++ b/app/src/main/res/drawable/edit_text_rounded_corner.xml
@@ -3,5 +3,5 @@
 
     <stroke android:width="1dp" android:color="@color/green"/>
     <corners android:radius="5dp"/>
-    <solid android:color="@color/green"/>
+    <solid android:color="@color/white"/>
 </shape>
