--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
-    tools:context=".OrderDetailsActivity">
+    tools:context=".DetailedOrderActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -54,110 +54,151 @@
                 app:cardCornerRadius="8dp"
                 app:cardElevation="20dp">
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="4dp">
+                    android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/title"
+                        <!-- First LinearLayout with background image -->
+
+                        <!-- Second LinearLayout below the first one -->
+                        <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"
-                            android:fontFamily="@font/hacen_beirut_bight"
-                            android:text="معلومات المطعم"
-                            android:textColor="@android:color/black"
-                            android:textSize="20sp"
-                            android:textStyle="bold" />
+                            android:layout_height="130dp"
+                            android:background="@drawable/resrurant_image"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="70dp"
+                                android:layout_height="25dp"
+                                android:layout_margin="15dp"
+                                android:background="@drawable/edit_text_rounded_corner"
+                                android:orientation="horizontal"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent">
+
+                                <ImageView
+                                    android:id="@+id/image_view"
+                                    android:layout_width="18dp"
+                                    android:layout_height="18dp"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginStart="10dp"
+                                    android:contentDescription="Image"
+                                    android:src="@drawable/ic_star" />
+
+                                <TextView
+                                    android:id="@+id/valtv"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginStart="8dp"
+                                    android:fontFamily="@font/hacen_beirut_bight"
+                                    android:text="5.0"
+                                    android:textColor="@color/yellow_grad"
+                                    android:textSize="18sp"
+                                    android:textStyle="bold" />
+
+                            </LinearLayout>
+
+                            <androidx.constraintlayout.widget.ConstraintLayout
+                                android:id="@+id/constraintLayout"
+                                android:layout_width="70dp"
+                                android:layout_height="25dp"
+                                android:layout_margin="15dp"
+                                android:background="@drawable/edit_text_rounded_corner"
+                                android:orientation="horizontal"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toStartOf="parent">
+
+                                <TextView
+                                    android:id="@+id/status"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_vertical"
+                                    android:fontFamily="@font/hacen_beirut_bight"
+                                    android:text="مفتوح"
+                                    android:textColor="@color/green"
+                                    android:textSize="18sp"
+                                    android:textStyle="bold"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent" />
+
+                            </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal">
+                            android:layout_margin="10dp"
+                            android:orientation="vertical">
 
-                            <ImageView
-                                android:id="@+id/profile_image"
-                                android:layout_width="60dp"
-                                android:layout_height="60dp"
-                                android:layout_marginLeft="10dp"
-                                android:scaleType="centerCrop"
-                                android:src="@drawable/profile" />
+
+                            <androidx.constraintlayout.widget.ConstraintLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+
+                                <TextView
+                                    android:id="@+id/placeres"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="start"
+                                    android:fontFamily="@font/hacen_beirut_bight"
+                                    android:paddingStart="5dp"
+                                    android:text="لبامة-البياضة"
+                                    android:textColor="@color/pink"
+                                    android:textSize="20sp"
+                                    android:textStyle="bold"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent" />
+
+                                <ImageView
+                                    android:id="@+id/location_icon1"
+                                    android:layout_width="24dp"
+                                    android:layout_height="24dp"
+                                    android:layout_gravity="center_vertical"
+                                    android:padding="1dp"
+                                    android:src="@drawable/placeholder"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintEnd_toStartOf="@+id/placeres"
+                                    app:layout_constraintTop_toTopOf="parent"
+                                    app:layout_constraintVertical_bias="0.428" />
+
+                                <TextView
+                                    android:id="@+id/resname"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/hacen_beirut_bight"
+                                    android:text="ملك البروتين"
+                                    android:textColor="@color/black"
+                                    android:textSize="20sp"
+                                    android:textStyle="bold"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent" />
+
+                            </androidx.constraintlayout.widget.ConstraintLayout>
 
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-
-                                <TextView
-                                    android:id="@+id/title_res"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginStart="8dp"
-                                    android:fontFamily="@font/hacen_beirut_bight"
-                                    android:text="مطعم السعادة"
-                                    android:textColor="@android:color/black"
-                                    android:textSize="16sp"
-                                    android:textStyle="bold" />
-
-                                <TextView
-                                    android:id="@+id/place_res"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginStart="8dp"
-                                    android:fontFamily="@font/hacen_beirut_bight"
-                                    android:text="حي فاتح نوفمبر لبامة البياضة"
-                                    android:textColor="@color/grey"
-                                    android:textSize="16sp"
-                                    android:textStyle="bold" />
+                                android:orientation="horizontal">
 
                             </LinearLayout>
                         </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:paddingRight="70dp">
-
-                            <Button
-                                android:id="@+id/call_res_btn"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="8dp"
-                                android:background="@drawable/white_button"
-                                android:drawableRight="@drawable/ic_call_green"
-                                android:fontFamily="@font/hacen_beirut_bight"
-                                android:text="اتصال"
-                                android:textColor="@color/green"
-                                android:textSize="20dp" />
-
-                            <Button
-                                android:id="@+id/direction_res_btn"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="8dp"
-                                android:background="@drawable/white_button"
-                                android:drawableRight="@drawable/ic_placeholder_grey"
-                                android:fontFamily="@font/hacen_beirut_bight"
-                                android:text="الاتجاه"
-                                android:textColor="@color/grey"
-                                android:textSize="20dp" />
-                        </LinearLayout>
-
-
                     </LinearLayout>
-
-
-                </RelativeLayout>
+                </LinearLayout>
 
             </androidx.cardview.widget.CardView>
-
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -177,12 +218,12 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/title_user"
+                            android:id="@+id/title_manDelivery"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             android:fontFamily="@font/hacen_beirut_bight"
-                            android:text="معلومات الزبون"
+                            android:text="معلومات الزبون "
                             android:textColor="@android:color/black"
                             android:textSize="20sp"
                             android:textStyle="bold" />
@@ -212,7 +253,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="8dp"
                                     android:fontFamily="@font/hacen_beirut_bight"
-                                    android:text="أكرم بالهادي"
+                                    android:text="اسم الزبون"
                                     android:textColor="@android:color/black"
                                     android:textSize="16sp"
                                     android:textStyle="bold" />
@@ -270,6 +311,7 @@
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
+                android:id="@+id/order_compenment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -293,56 +335,22 @@
                     android:layout_marginRight="5dp"
                     android:background="@color/grey" />
 
-                <include layout="@layout/custom_order_detailed" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:background="@color/grey" />
-
-                <include layout="@layout/custom_order_detailed" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:background="@color/grey" />
-                <TextView
-                    android:id="@+id/orderprice"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="20dp"
-                    android:fontFamily="@font/hacen_beirut_bight"
-                    android:text="سعر الطلبية : 1800 دج"
-                    android:textColor="@android:color/black"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-                <TextView
-                    android:id="@+id/delprice"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:fontFamily="@font/hacen_beirut_bight"
-                    android:text="سعر التوصيل : 200 دج"
-                    android:textColor="@android:color/black"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-                <TextView
-                    android:id="@+id/allprice"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:fontFamily="@font/hacen_beirut_bight"
-                    android:text="السعر الاجمالي : 2000 دج"
-                    android:textColor="@android:color/black"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:orientation="vertical">
 
-
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/additional_information_title"
@@ -373,10 +381,10 @@
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
                     android:background="@drawable/accept_button"
                     android:fontFamily="@font/hacen_beirut_bight"
                     android:text="تم التوصيل"
-                    android:layout_marginTop="20dp"
                     android:textColor="@color/white"
                     android:textSize="20dp" />
             </LinearLayout>
