--- a/app/src/main/res/layout/custom_order_detailed.xml
+++ b/app/src/main/res/layout/custom_order_detailed.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layoutDirection="rtl"
-    android:padding="4dp">
+    android:layout_margin="4dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="8dp"
         android:orientation="vertical">
 
 
@@ -72,16 +75,16 @@
             android:layout_height="wrap_content"
             android:paddingRight="50dp"
             android:orientation="horizontal">
-        <TextView
-            android:id="@+id/additional_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:fontFamily="@font/hacen_beirut_bight"
-            android:text="الاضافات : "
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/additional_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/hacen_beirut_bight"
+                android:text="الاضافات : "
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -110,8 +113,8 @@
             </LinearLayout>
 
 
-    </LinearLayout></LinearLayout>
+        </LinearLayout></LinearLayout>
 
 
-</RelativeLayout>
+</androidx.cardview.widget.CardView>
 
